# zkp-workshop

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
circom/: README.md  num2binary3.circom  package-lock.json  package.json
circom/circuits/: div.circom  is_zero.circom  num2binary1.circom  num2binary2.circom  num2bits.circom  signal.circom  simple.circom
circom/src/: client.ts  eddsa.ts
circom/tests/: main.test.ts
ed25519-keys/: Cargo.toml
ed25519-keys/src/: main.rs
research/dlog-proof/: .pdm-python  README.md  pyproject.toml
research/dlog-proof/src/: main.py
research/vdf-proof/: .pdm.toml  README.md  pyproject.toml
research/vdf-proof/src/: fft.py  fri.py  main.py  merkle_tree.py  mimc_stark.py  permuted_tree.py  poly_utils.py  utils.py
zkcourse/: README.md  lecture1.md  lecture2.md  lecture3.md
